Fix for action panel icon alignment (#51)
* Remove unnecessary negative margins on legacy-panel header icon.

* Add in an option to docs left padding when we want to intermix docs with other page elements.

--- a/src/scss/layout/_docs.scss
+++ b/src/scss/layout/_docs.scss
@@ -176,6 +176,10 @@ $docs-navigation-height: 4.3125rem;
       .docs__content {
         background-color: $color_light_2;
         padding-left: calc(#{$column-gutter} / 2);
+
+        &--no-padding {
+          padding-left: 0;
+        }
       }
     }
   }
